# cloudini

./: .gitignore  AppImageBuilder.yml  CLAUDE.md  CLOUDINI_ALGORITHM_ANALYSIS.md  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: release-appimage.yaml  rolling.repos  ros-humble.yaml  ros-jazzy.yaml  ros-rolling.yaml  ubuntu-build.yaml  ubuntu.yaml
cloudini_foxglove/: .gitignore  README.md  VOLIRO_CUSTOM.md  package-lock.json  package.json  tsconfig.json
cloudini_foxglove/release/: cloudini.foxglove-cloudini-converter-0.0.1.foxe  cloudini.foxglove-cloudini-converter-0.2.0.foxe
cloudini_foxglove/src/: PointCloudConverter.tsx  Schemas.tsx  cloudini_wasm.d.ts  cloudini_wasm_single.d.ts  index.ts
cloudini_js/: README.md  package-lock.json  package.json  vite.config.ts
cloudini_js/src/: BufferView.tsx  DecodeHeader.tsx  DecodingUtils.tsx  FieldDecoders.tsx  PointCloudConverter.tsx  Schemas.tsx  index.ts
cloudini_lib/: CHANGELOG.rst  CMakeLists.txt  README.nmd  package.xml
cloudini_lib/benchmarks/: CMakeLists.txt  pcd_benchmark.cpp
cloudini_lib/cmake/: FindLZ4.cmake  FindZSTD.cmake  download_deps.cmake  find_or_download_lz4.cmake  find_or_download_zstd.cmake
cloudini_lib/include/cloudini/: basic_types.hpp  cloudini.hpp  encoding_utils.hpp  field_decoder.hpp  field_encoder.hpp  intrinsics.hpp  pcl_conversion.hpp
cloudini_lib/include/cloudini_lib/: basic_types.hpp  cloudini.hpp  encoding_utils.hpp  field_decoder.hpp  field_encoder.hpp  intrinsics.hpp  pcl_conversion.hpp  ros_message_definitions.hpp  ros_msg_utils.hpp  wasm_functions.h  yaml_parser.hpp
cloudini_lib/include/cloudini_lib/contrib/: nanocdr.hpp  span.hpp
cloudini_lib/src/: chunk_writer.cpp  chunk_writer.hpp  cloudini.cpp  codec_common.cpp  codec_common.hpp  field_decoder.cpp  field_encoder.cpp  pcl_conversion.cpp  ros_msg_utils.cpp  v4_codec.cpp  v4_codec.hpp  v5_codec.cpp  v5_codec.hpp  wasm_functions.cpp
cloudini_lib/test/: CMakeLists.txt  test_field_encoders.cpp  test_header.cpp  test_intrinsics.cpp  test_pcl.cpp  test_ros_msg.cpp
cloudini_lib/tools/: CMakeLists.txt  cloudini.desktop
cloudini_lib/tools/converter/: main.cpp  mainwindow.cpp
cloudini_lib/tools/include/: mcap_converter.hpp  message_definitions.hpp
cloudini_lib/tools/qt_app/: bytearray_writable.hpp  main.cpp  mainwindow.cpp  mainwindow.h
cloudini_lib/tools/src/: cloudini_rosbag_converter.cpp  mcap_codec_benchmark.cpp  mcap_converter.cpp  mcap_cutter.cpp  pcd_to_cloudini_converter.cpp  ros_mcap_converter.cpp
cloudini_py/: IMPLEMENTATION_NOTES.md  README.md  REFACTORING_SUMMARY.md  cloudini_decoder.py  decode_mcap.py  rebuild_wasm.sh  rebuild_wasm_no_exceptions.sh
cloudini_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  cloudini_plugins.xml  package.xml
cloudini_ros/include/cloudini_plugin/: cloudini_publisher.hpp  cloudini_subscriber.hpp
cloudini_ros/include/cloudini_ros/: conversion_utils.hpp
cloudini_ros/src/: cloudini_publisher.cpp  cloudini_subscriber.cpp  cloudini_subscriber_pcl.cpp  conversion_utils.cpp  plugin_manifest.cpp  topic_converter.cpp
cloudini_ros/test/: rosbag_benchmark.cpp  test_plugin_publisher.cpp  test_plugin_subscriber.cpp
cloudini_tools/: CMakeLists.txt
cloudini_tools/converter/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cloudini_web/: index.html  main.js  package.json
cloudini_web/public/: cloudini_wasm.js  cloudini_wasm.wasm
cloudini_web/src/: style.css
scripts/: regenerate_readme_plots.py
