<?xml version="1.0"?>
<package format="3">
  <name>cloudini_lib</name>
  <version>0.3.3</version>
  <description>
  Main library of Cloudini, the pointcloud compression library
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>Apache 2.0</license>

  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lz4</depend>
  <depend>libzstd-dev</depend>
   <depend>pcl_ros</depend>

  <export>
      <build_type >ament_cmake</build_type>
  </export>

</package>
